syntax = "proto3";

option go_package = "github.com/vignesh/example-go-grpc/protogen/golang/orders";

import "google/protobuf/timestamp.proto";
// import "proto/product/product.proto";
message Empty {}

message PayloadWithSingleOrder {
  Order order = 1;
}

service Orders {
  rpc AddOrder(PayloadWithSingleOrder) returns (Empty) {}
}

message Order {
    uint64 order_id = 1 [ json_name = "order_id" ];
    uint64 customer_id = 2 [ json_name = "customer_id" ];
    bool is_active = 3 [ json_name = "is_active" ];
    google.protobuf.Timestamp order_date = 5 [ json_name = "order_date" ];
    repeated Product products = 4;
}


enum ProductType {
    UNKNOWN = 0;
    FOOD = 1;
    DRINK = 2;
}

message Product {
    uint64 product_id = 1 [ json_name = "product_id" ];
    string product_name = 2 [ json_name = "product_name" ];
    ProductType product_type = 5 [ json_name = "product_type" ];
}
